Added target directories to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
 .idea
 *.iml
 rebel.xml
+ui/accesskeyhelper/demo/target
+ui/accesskeyhelper/ui/target
+ui/carousel/demo/target
+ui/carousel/ui/target
+ui/contextmenu/demo/target
+ui/contextmenu/ui/target
+ui/dashboard/demo/target
+ui/dashboard/ui/target
+ui/focus/demo/target
+ui/focus/ui/target
+ui/imageSelectTool/demo/target
+ui/imageSelectTool/ui/target
+ui/lightbox/demo/target
+ui/lightbox/ui/target
+ui/notify/demo/target
+ui/notify/ui/target
+ui/schedule/demo/target
+ui/schedule/ui/target
+ui/visualsearch/demo/target
+ui/visualsearch/ui/target
+ui/watermark/demo/target
+ui/watermark/ui/target
