Created sandbox assembly and demo for that assembly.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ ui/visualsearch/demo/target
 ui/visualsearch/ui/target
 ui/watermark/demo/target
 ui/watermark/ui/target
+ui/dist/richfaces-sandbox-ui/target
