--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -25,18 +25,26 @@
 
     <parent>
         <groupId>org.richfaces</groupId>
-        <artifactId>richfaces-parent</artifactId>
-        <version>6</version>
+        <artifactId>richfaces-root-parent</artifactId>
+        <version>4.1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.richfaces.ui-sandbox</groupId>
+    <groupId>org.richfaces.sandbox.ui</groupId>
     <artifactId>components</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Richfaces UI Components Sandbox Aggregator</name>
- 
+
     <modules>
-        <module>notify</module>
+        <module>accesskeyhelper</module>
+        <module>carousel</module>
+        <module>contextmenu</module>
+        <module>dashboard</module>
+        <module>focus</module>
+        <module>imageSelectTool</module>
+        <module>lightbox</module>
         <module>schedule</module>
+        <module>visualsearch</module>
+        <module>watermark</module>
+        <module>dist</module>
     </modules>
 </project>
