--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ ui/lightbox/demo/target
 ui/lightbox/ui/target
 ui/notify/demo/target
 ui/notify/ui/target
+ui/outputFile/demo/target
+ui/outputFile/ui/target
 ui/rating/demo/target
 ui/rating/ui/target
 ui/schedule/demo/target
