--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ ui/focus/demo/target
 ui/focus/ui/target
 ui/imageSelectTool/demo/target
 ui/imageSelectTool/ui/target
+ui/layout/demo/target
+ui/layout/ui/target
 ui/lightbox/demo/target
 ui/lightbox/ui/target
 ui/notify/demo/target
