--- a/ui/focus/bom/pom.xml
+++ b/ui/focus/bom/pom.xml
@@ -20,8 +20,7 @@
   02110-1301 USA, or see the FSF site: http://www.fsf.org.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -52,14 +51,14 @@
 
     <distributionManagement>
         <repository>
-            <id>bernard.labno.pl</id>
+            <id>it-crowd.com.pl</id>
             <name>IT Crowd company Internal Repository</name>
-            <url>http://bernard.labno.pl/artifactory/libs-release-local</url>
+            <url>http://artifactory.it-crowd.com.pl/libs-release-local</url>
         </repository>
         <snapshotRepository>
-            <id>bernard.labno.pl</id>
-            <name>IT Crowd company Internal Repository</name>
-            <url>http://bernard.labno.pl/artifactory/libs-snapshot-local</url>
+            <id>it-crowd.com.pl</id>
+            <name>IT Crowd company Repository</name>
+            <url>http://artifactory.it-crowd.com.pl/libs-snapshot-local</url>
         </snapshotRepository>
     </distributionManagement>
 
