--- a/ui/focus/pom.xml
+++ b/ui/focus/pom.xml
@@ -19,8 +19,7 @@
   Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
   02110-1301 USA, or see the FSF site: http://www.fsf.org.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -42,17 +41,10 @@
         <module>demo</module>
     </modules>
 
-    <distributionManagement>
-        <repository>
-            <id>bernard.labno.pl</id>
-            <name>IT Crowd company Internal Repository</name>
-            <url>http://bernard.labno.pl/artifactory/libs-release-local</url>
-        </repository>
-        <snapshotRepository>
-            <id>bernard.labno.pl</id>
-            <name>IT Crowd company Internal Repository</name>
-            <url>http://bernard.labno.pl/artifactory/libs-snapshot-local</url>
-        </snapshotRepository>
-    </distributionManagement>
+    <scm>
+        <connection>scm:git:https://blabno@github.com/blabno/sandbox.git</connection>
+        <developerConnection>scm:git:https://blabno@github.com/blabno/sandbox.git</developerConnection>
+        <url>https://github.com/blabno/sandbox</url>
+    </scm>
 
 </project>
