--- a/ui/focus/demo/pom.xml
+++ b/ui/focus/demo/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.focus</groupId>
         <artifactId>focus-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.0.Final</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
@@ -36,12 +36,12 @@
         <dependency>
             <groupId>org.richfaces.ui</groupId>
             <artifactId>richfaces-components-ui</artifactId>
-            <version>4.1.0-SNAPSHOT</version>
+            <version>4.1.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.richfaces.core</groupId>
             <artifactId>richfaces-core-impl</artifactId>
-            <version>4.1.0-SNAPSHOT</version>
+            <version>4.1.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.richfaces.sandbox.ui.focus</groupId>
