--- a/ui/focus/pom.xml
+++ b/ui/focus/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.focus</groupId>
         <artifactId>focus-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.0.Final</version>
         <relativePath>parent/pom.xml</relativePath>
     </parent>
 
