--- a/ui/focus/ui/pom.xml
+++ b/ui/focus/ui/pom.xml
@@ -29,7 +29,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.focus</groupId>
         <artifactId>focus-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.0.Final</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
     <artifactId>focus-ui</artifactId>
@@ -39,13 +39,13 @@
         <dependency>
             <groupId>org.richfaces.ui.core</groupId>
             <artifactId>richfaces-ui-core-ui</artifactId>
-            <version>4.1.0-SNAPSHOT</version>
+            <version>4.1.0.Final</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.richfaces.ui</groupId>
             <artifactId>richfaces-components-ui</artifactId>
-            <version>4.1.0-SNAPSHOT</version>
+            <version>4.1.0.Final</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -70,7 +70,7 @@
             <plugin>
                 <groupId>org.richfaces.cdk</groupId>
                 <artifactId>maven-cdk-plugin</artifactId>
-                <version>4.1.0-SNAPSHOT</version>
+                <version>4.1.0.Final</version>
                 <executions>
                     <execution>
                         <id>cdk-generate-sources</id>
