--- a/ui/carousel/ui/pom.xml
+++ b/ui/carousel/ui/pom.xml
@@ -22,15 +22,14 @@
   02110-1301 USA, or see the FSF site: http://www.fsf.org.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.richfaces.sandbox.ui.carousel</groupId>
         <artifactId>carousel-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.0.Final</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>carousel-ui</artifactId>
@@ -72,7 +71,7 @@
             <plugin>
                 <groupId>org.richfaces.cdk</groupId>
                 <artifactId>maven-cdk-plugin</artifactId>
-                <version>${project.version}</version>
+                <version>4.1.0.Final</version>
                 <executions>
                     <execution>
                         <id>cdk-generate-sources</id>
