--- a/ui/carousel/demo/pom.xml
+++ b/ui/carousel/demo/pom.xml
@@ -7,8 +7,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.carousel</groupId>
         <artifactId>carousel-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>4.1.0.Final</version>
     </parent>
 
     <artifactId>carousel-demo</artifactId>
