--- a/ui/carousel/ui/pom.xml
+++ b/ui/carousel/ui/pom.xml
@@ -30,8 +30,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.carousel</groupId>
         <artifactId>carousel-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>4.1.0.Final</version>
     </parent>
     <artifactId>carousel-ui</artifactId>
     <name>Richfaces UI Components: carousel ui</name>
