--- a/ui/colorpicker/demo/pom.xml
+++ b/ui/colorpicker/demo/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.colorpicker</groupId>
         <artifactId>colorpicker-parent</artifactId>
-        <version>4.1.0.Final</version>
+        <version>4.2.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
