--- a/ui/dashboard/demo/pom.xml
+++ b/ui/dashboard/demo/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.dashboard</groupId>
         <artifactId>dashboard-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.0.Final</version>
     </parent>
 
     <artifactId>dashboard-demo</artifactId>
