--- a/ui/dashboard/ui/pom.xml
+++ b/ui/dashboard/ui/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.dashboard</groupId>
         <artifactId>dashboard-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.0.Final</version>
     </parent>
     <artifactId>dashboard-ui</artifactId>
     <name>Richfaces UI Components: dashboard ui</name>
