--- a/ui/imageSelectTool/ui/pom.xml
+++ b/ui/imageSelectTool/ui/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.imageSelectTool</groupId>
         <artifactId>imageSelectTool-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.0.Final</version>
     </parent>
 
     <artifactId>imageSelectTool-ui</artifactId>
