--- a/ui/imageSelectTool/demo/pom.xml
+++ b/ui/imageSelectTool/demo/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.imageSelectTool</groupId>
         <artifactId>imageSelectTool-parent</artifactId>
-        <version>4.1.0.Final</version>
+        <version>4.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>imageSelectTool-demo</artifactId>
