--- a/ui/lightbox/demo/pom.xml
+++ b/ui/lightbox/demo/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.lightbox</groupId>
         <artifactId>lightbox-parent</artifactId>
-        <version>4.1.0.Final</version>
+        <version>4.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>lightbox-demo</artifactId>
