--- a/ui/syntaxhighlighter/ui/pom.xml
+++ b/ui/syntaxhighlighter/ui/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.syntaxhighlighter</groupId>
         <artifactId>syntaxhighlighter-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.0.Final</version>
     </parent>
 
     <artifactId>syntaxhighlighter-ui</artifactId>
