prepare for next development iteration

--- a/ui/outputFile/ui/pom.xml
+++ b/ui/outputFile/ui/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.outputFile</groupId>
         <artifactId>outputFile-parent</artifactId>
-        <version>4.1.0.Final</version>
+        <version>4.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>outputFile-ui</artifactId>
