--- a/ui/outputFile/demo/pom.xml
+++ b/ui/outputFile/demo/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.outputFile</groupId>
         <artifactId>outputFile-parent</artifactId>
-        <version>4.1.0.Final</version>
+        <version>4.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>outputFile-demo</artifactId>
