--- a/ui/rating/ui/pom.xml
+++ b/ui/rating/ui/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.rating</groupId>
         <artifactId>rating-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.0.Final</version>
     </parent>
 
     <artifactId>rating-ui</artifactId>
