--- a/ui/rating/demo/pom.xml
+++ b/ui/rating/demo/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.rating</groupId>
         <artifactId>rating-parent</artifactId>
-        <version>4.1.0.Final</version>
+        <version>4.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>rating-demo</artifactId>
