--- a/ui/rating/pom.xml
+++ b/ui/rating/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.richfaces</groupId>
         <artifactId>richfaces-root-parent</artifactId>
-        <version>4.1.0.Final</version>
+        <version>4.2.1-SNAPSHOT</version>
     </parent>
 
     <groupId>org.richfaces.sandbox.ui.rating</groupId>
