--- a/ui/schedule/ui/pom.xml
+++ b/ui/schedule/ui/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.schedule</groupId>
         <artifactId>schedule-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.0.Final</version>
     </parent>
 
     <artifactId>schedule-ui</artifactId>
