--- a/ui/schedule/demo/pom.xml
+++ b/ui/schedule/demo/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.schedule</groupId>
         <artifactId>schedule-parent</artifactId>
-        <version>4.1.0.Final</version>
+        <version>4.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>schedule-demo</artifactId>
