--- a/ui/visualsearch/demo/pom.xml
+++ b/ui/visualsearch/demo/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.visualsearch</groupId>
         <artifactId>visualsearch-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.0.Final</version>
     </parent>
 
     <artifactId>visualsearch-demo</artifactId>
