--- a/ui/visualsearch/ui/pom.xml
+++ b/ui/visualsearch/ui/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.visualsearch</groupId>
         <artifactId>visualsearch-parent</artifactId>
-        <version>4.1.0.Final</version>
+        <version>4.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>visualsearch-ui</artifactId>
