--- a/ui/watermark/ui/pom.xml
+++ b/ui/watermark/ui/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.richfaces.sandbox.ui.watermark</groupId>
         <artifactId>watermark-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.0.Final</version>
     </parent>
 
     <artifactId>watermark-ui</artifactId>
