--- a/ui/dynamic-panels/demo/pom.xml
+++ b/ui/dynamic-panels/demo/pom.xml
@@ -38,21 +38,16 @@
             <artifactId>dynamic-panels-ui</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.richfaces.ui</groupId>-->
-            <!--<artifactId>richfaces-components-ui</artifactId>-->
-            <!--<version>${project.version}</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.richfaces.core</groupId>
             <artifactId>richfaces-core-impl</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.richfaces.sandbox.ui.dynamicTabPanel</groupId>-->
-            <!--<artifactId>dynamicTabPanel-ui</artifactId>-->
-            <!--<version>${project.version}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.richfaces.ui</groupId>
+            <artifactId>richfaces-components-ui</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
