--- a/ui/dynamic-panels/ui/pom.xml
+++ b/ui/dynamic-panels/ui/pom.xml
@@ -38,18 +38,22 @@
         <dependency>
             <groupId>org.richfaces.core</groupId>
             <artifactId>richfaces-core-api</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.richfaces.ui.common</groupId>
             <artifactId>richfaces-ui-common-ui</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.richfaces.ui.core</groupId>
             <artifactId>richfaces-ui-core-ui</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.richfaces.ui.output</groupId>
             <artifactId>richfaces-ui-output-api</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.richfaces.cdk</groupId>
